# DodamDodam

./: .gitignore  docker-compose.yml  init-letsencrypt.sh  requirements.txt
.github/workflows/: cd.yml
backend/: Dockerfile  build.gradle
backend/src/main/resources/: application.properties  messages.properties
fastapi/: Dockerfile  alembic.ini  celery_app.py  dataset.json  jwt_utils.py  main.py  mongodb_connection.py  mysql_connection.py  pyproject.toml  requirements.txt  s3_connection.py  sse_manager.py  tasks.py
fastapi/alembic/: env.py
fastapi/alembic/versions/: 1098e3c26b67_remove_speech_settings_table.py  22a288c3f78a_create_profiles_table.py  3060015f8a55_add_last_name_to_profile_table.py  5a8d1a90f77a_edit_age_from_profiles.py  5f8f6219d0d6_create_tokens_table.py  63d3ee30154f_create_messages_table.py  715968d58aac_create_conversations_table.py  7293e5f1834d_create_users_table.py  7f98a209bf86_create_home_info_table.py  8daadbbc13ff_create_settings_table.py  a6b5e96957f0_edit_photo_from_profiles.py  e5c09711e3c7_recreate_correct_tables.py  f1179d00f04b_create_schedules_table.py  fb04dd70fc69_create_test_table.py
fastapi/conversations/: gpt_model_utility.py  models.py  pinecone.py  routes.py  schemas.py  services.py  stt_connection.py  tts_connection.py
fastapi/emotions/: models.py  routes.py  services.py
fastapi/members/: models.py  routes.py  schemas.py  services.py  validations.py
fastapi/schedules/: models.py  routes.py  scheduler.py  schemas.py  services.py
fastapi/talk/: models.py  routes.py  services.py
fastapi/test/: sql_models.py  sql_routes.py
fastapi/users/: models.py  routes.py  schemas.py  services.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/config/: webpack.config.js  webpackDevServer.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  AppProvider.js  index.css  index.js
frontend/src/Service/: Api.js
frontend/src/component/: AsideForm.css  LoginForm.js  NonUserHeaderForm.js  SignupForm.css  SignupForm.js  UserHeaderForm.js
frontend/src/components/: Wave.css
frontend/src/components/Aside/: AsideForm.js
frontend/src/components/Calendar/: Calendar.css  Calendar.js  CalendarForm.js  DatePicker.css
frontend/src/components/Conversation/: Calendar.js  ConversationContentBoard.js  ConversationSummary.js  SpeechToText.js
frontend/src/components/Detail/: DetailForm.css  DetailForm.js
frontend/src/components/EmotionAnalysis/: Calendar.js  EmotionAnalysisBoard.js  Spinner.js
frontend/src/pages/: Protector.js
frontend/src/services/: Api.js
nginx/: nginx.conf
(+195 files in other folders)
