[tool.poetry]
name = "dodamdodam"
version = "1.1.13"
description = ""
authors = ["Kookim2jung <kookim2jung@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = ">=1.25.4,<1.27"
botocore = "1.34.93"
aiohttp = "3.9.4"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
attrs = "23.2.0"
boto3 = "1.34.88"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
distro = "1.9.0"
dnspython = "2.6.1"
fastapi = "0.110.1"
frozenlist = "1.4.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
jmespath = "1.0.1"
motor = "3.4.0"
multidict = "6.0.5"
openai = "0.28.0"
pydantic = "2.7.0"
pydantic-core = "2.18.1"
pymongo = "4.6.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-magic = "0.4.27"
python-multipart = "0.0.9"
requests = "2.31.0"
s3transfer = "0.10.1"
six = "1.16.0"
sniffio = "1.3.1"
starlette = "0.37.2"
tqdm = "4.66.2"
typing-extensions = "4.11.0"
uvicorn = "0.29.0"
yarl = "1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
